--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <a href="tel:+110001111111" class="contact-link link">+11 (000) 111-11-11</a>
         </li>
       </ul>
+      
     </div>
     </header>
     <main>
@@ -513,5 +514,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
