--- a/index.html
+++ b/index.html
@@ -143,64 +143,50 @@
       <!--Benefits-->
       <section class="bnfts-box">
         <div class="container">
-          <h2 class="hide">Benefits</h2>
+          <h2 class="hidden-title">Benefits</h2>
           <ul class="bnf-icon-list">
             <li class="bnf-item">
-              <div>
+              <div class="bnf-div">
                 <svg width="64" height="64">
-                  <use href="./img/icons.svg#icon-Vector"></use>
+                  <use href="./img/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-            </li>
-            <li class="bnf-item">
-              <div>
-                <svg width="64" height="64">
-                  <use href="./img/icons.svg#icon-Vector-2"></use>
-                </svg>
-              </div>
-            </li>
-            <li class="bnf-item">
-              <div>
-                <svg width="64" height="64">
-                  <use href="./img/icons.svg#icon-Vector-3"></use>
-                </svg>
-              </div>
-            </li>
-            <li class="bnf-item">
-              <div>
-                <svg width="64" height="64">
-                  <use href="./img/icons.svg#icon-Vector-4"></use>
-                </svg>
-              </div>
-            </li>
-          </ul>
-          <ul class="list benefits">
-            <li class="bnfts">
-              <h2 class="bnft-mob-header">Strategy</h2>
               <h3 class="third-header">Strategy</h3>
               <p class="bnft-item-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="bnfts">
-              <h2 class="bnft-mob-header">Punctuality</h2>
+            <li class="bnf-item">
+              <div class="bnf-div">
+                <svg width="64" height="64">
+                  <use href="./img/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="third-header">Punctuality</h3>
               <p class="bnft-item-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="bnfts">
-              <h2 class="bnft-mob-header">Diligence</h2>
+            <li class="bnf-item">
+              <div class="bnf-div">
+                <svg width="64" height="64">
+                  <use href="./img/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="third-header">Diligence</h3>
               <p class="bnft-item-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="bnfts">
-              <h2 class="bnft-mob-header">Technologies</h2>
+            <li class="bnf-item">
+              <div class="bnf-div">
+                <svg width="64" height="64">
+                  <use href="./img/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="third-header">Technologies</h3>
               <p class="bnft-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -227,10 +213,10 @@
             <li>
               <picture>
                 <source
-                  srcset="./img/mob.jpg 1x, ./img/mon-2px.jpg 2x"
+                  srcset="./img/mob.jpg 1x, ./img/mob-2px.jpg 2x"
                   media="(min-width: 1200px)"
                 />
-                <img src="./img/img2.jpg" width="360" alt="Mobile screenshots" />
+                <img src="./img/mob.jpg" width="360" alt="Mobile screenshots" />
               </picture>
             </li>
             <li>
@@ -462,7 +448,8 @@
         </div>
       </section>
 
-      <section class="customers container">
+      <section class="customers">
+        <div class="container">
         <h2 class="secondary-header ot-header">Customers</h2>
         <ul class="customers-list">
           <li>
@@ -508,6 +495,7 @@
             </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!--Footer-->
