--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <li>
               <picture>
                 <source
-                  srcset="./img/web.jpg 1x, ./img/web-2px.jpg 2x"
+                  srcset="./img/web.jpg 1x, ./img/web-2x.jpg 2x"
                   media="(min-width: 1200px)"
                 />
                 <img src="./img/web.jpg" width="360" alt="Monitor" />
@@ -213,7 +213,7 @@
             <li>
               <picture>
                 <source
-                  srcset="./img/mob.jpg 1x, ./img/mob-2px.jpg 2x"
+                  srcset="./img/mob.jpg 1x, ./img/mob-2x.jpg 2x"
                   media="(min-width: 1200px)"
                 />
                 <img src="./img/mob.jpg" width="360" alt="Mobile screenshots" />
@@ -222,7 +222,7 @@
             <li>
               <picture>
                 <source
-                  srcset="./img/adaptive.jpg 1x, ./img/adaptive-2px.jpg 2x"
+                  srcset="./img/adaptive.jpg 1x, ./img/adaptive-2x.jpg 2x"
                   media="(min-width: 1200px)"
                 />
                 <img src="./img/adaptive.jpg" width="360" alt="Mobile phone" />
