--- a/index.html
+++ b/index.html
@@ -202,32 +202,32 @@
           <h2 class="secondary-header">What are we doing</h2>
           <ul class="list wwad">
             <li>
-              <picture>
-                <source
-                  srcset="./img/web.jpg 1x, ./img/web-2x.jpg 2x"
-                  media="(min-width: 1200px)"
-                />
-                <img src="./img/web.jpg" width="360" alt="Monitor" />
-              </picture>
-            </li>
-            <li>
-              <picture>
-                <source
-                  srcset="./img/mob.jpg 1x, ./img/mob-2x.jpg 2x"
-                  media="(min-width: 1200px)"
-                />
-                <img src="./img/mob.jpg" width="360" alt="Mobile screenshots" />
-              </picture>
-            </li>
-            <li>
-              <picture>
-                <source
-                  srcset="./img/adaptive.jpg 1x, ./img/adaptive-2x.jpg 2x"
-                  media="(min-width: 1200px)"
-                />
-                <img src="./img/adaptive.jpg" width="360" alt="Mobile phone" />
-              </picture>
-            </li>
+            <img
+            srcset="./img/web.jpg 1x, ./img/web-2x.jpg 2x"
+            src="./img/web.jpg"
+            alt="monitor"
+            width="360"
+            height="300"
+          />
+        </li>
+        <li>
+          <img
+          srcset="./img/mob.jpg 1x, ./img/mob-2x.jpg 2x"
+          src="./img/mob.jpg"
+          alt="monitor"
+          width="360"
+          height="300"
+        />
+      </li>
+      <li>
+        <img
+        srcset="./img/adaptive.jpg 1x, ./img//adaptive-2x.jpg 2x"
+        src="./img//adaptive.jpg"
+        alt="monitor"
+        width="360"
+        height="300"
+      />
+    </li>
           </ul>
         </div>
       </section>
