--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <li class="soc-item">
                       <a class="soc-item-link" href="">
                         <svg class="soc-icon" width="16" height="13">
-                          <use href="./img/icons.svg#icon-twitter"></use></svg ></a>
+                          <use href="./img/icons.svg#icon-twitter"></use></svg></a>
                     </li>
 
                     <li class="soc-item">
@@ -427,13 +427,13 @@
                     <li class="soc-item">
                       <a class="soc-item-link" href=""
                         ><svg class="soc-icon" height="16">
-                          <use href="./img/icons.svg#icon-facebook"></use></svg></a>
+                          <use href="./img/icons.svg#icon-facebook"></use></svg ></a>
                     </li>
 
                     <li class="soc-item">
                       <a class="soc-item-link" href=""
                         ><svg class="soc-icon" width="16" height="16">
-                          <use href="./img/icons.svg#icon-linkedin"></use></svg ></a>
+                          <use href="./img/icons.svg#icon-linkedin"></use></svg  ></a>
                     </li>
                   </ul>
                 </div>
@@ -447,42 +447,42 @@
         <div class="container">
           <h2 class="secondary-header ot-header">Customers</h2>
           <ul class="customers-list">
-            <li>
+            <li class="customers-list-item">
               <a class="customers-item-link" href="">
                 <svg width="104" height="56">
                   <use href="./img/icons.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-list-item">
               <a class="customers-item-link" href="">
                 <svg width="104" height="56">
                   <use href="./img/icons.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-list-item">
               <a class="customers-item-link" href="">
                 <svg width="104" height="56">
                   <use href="./img/icons.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-list-item">
               <a class="customers-item-link" href="">
                 <svg width="104" height="56">
                   <use href="./img/icons.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-list-item">
               <a class="customers-item-link" href="">
                 <svg width="104" height="56">
                   <use href="./img/icons.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-list-item">
               <a class="customers-item-link" href="">
                 <svg width="104" height="56">
                   <use href="./img/icons.svg#icon-Logo6"></use>
@@ -528,12 +528,12 @@
               <li class="soc-item">
                 <a class="ft-soc-item-link" href=""
                   ><svg class="soc-icon" width="24" height="24">
-                    <use href="./img/icons.svg#icon-facebook"></use></svg></a>
+                    <use href="./img/icons.svg#icon-facebook"></use></svg ></a>
               </li>
               <li class="soc-item">
                 <a class="ft-soc-item-link" href=""
                   ><svg class="soc-icon" width="24" height="24">
-                    <use href="./img/icons.svg#icon-linkedin"></use></svg ></a>
+                    <use href="./img/icons.svg#icon-linkedin"></use></svg></a>
               </li>
             </ul>
           </div>
