--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
       </div>
 
       <div class="mobile-menu mm-wrapper" data-menu>
-        <div>
           <button class="mobile-menu-close-btn" data-menu-close>
             <svg class="mobile-menu-close-icon" width="8" height="8">
               <use href="./img/icons.svg#icon-close"></use>
@@ -84,7 +83,6 @@
             </li>
             <li><a href="" class="link mobile-menu-item">Contacts</a></li>
           </ul>
-        </div>
 
         <div class="mm-contacts">
           <ul class="list mm-contacts-items">
@@ -130,7 +128,8 @@
     <main>
       <!--Hero-->
       <section class="hero">
-        <div class="mh-box">
+        <!--<div class="mh-box">-->
+          <div class="container">
           <h1 class="main-header">Effective Solutions for Your Business</h1>
         </div>
         <div>
